@@ -1,3 +1,13 @@
+2007-07-06  George Staikos  <staikos@kde.org>
+
+        Reviewed by Maciej.
+
+        Switch USE(ICONDATABASE) to ENABLE(ICONDATABASE) and activate the
+        flag via the .pro file
+
+        * WebCore.pro:
+        * loader/icon/IconDatabase.h:
+
 2007-07-05  John Sullivan  <sullivan@apple.com>
 
         Reviewed by Adam
