@@ -1,3 +1,11 @@
+2007-07-06  George Staikos  <staikos@kde.org>
+
+        Reviewed by Maciej.
+
+        Switch USE(ICONDATABASE) to ENABLE(ICONDATABASE)
+
+        * wtf/Platform.h:
+
 2007-07-03  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Darin.
